--- a/cadastro.html
+++ b/cadastro.html
@@ -102,7 +102,7 @@
         </div>
     </div>
 </div>
-<div class="" style="background-color: rgb(10, 10, 10);">
+<div class="fixed-bottom" style="background-color: rgb(10, 10, 10);">
     <hr>
     <div class="container d-flex justify-content-center">
         <footer>
