--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <!-- traile  rs-->
     </div>
     <!--footer-->
-    <div style="background-color: rgb(10, 10, 10);">
+    <div class="bottom-0" style="background-color: rgb(10, 10, 10);">
         <hr>
         <div class="container d-flex justify-content-center">
             <footer>
